# fractal_algebra

./: .gitignore  Cargo.toml  README.md
crates/fa_bayes/: Cargo.toml
crates/fa_bayes/src/: lib.rs
crates/fa_core/: Cargo.toml
crates/fa_core/src/: lib.rs  state.rs  traits.rs
crates/fa_group_theory/: Cargo.toml
crates/fa_slow_ai/: Cargo.toml  README.md  main.txt
crates/fa_slow_ai/src/: entangled_system.rs  lib.rs  main.rs
crates/factorial_engine/: Cargo.toml  README.md
crates/factorial_engine/examples/fast_fac/: Cargo.toml
crates/factorial_engine/examples/fast_fac/src/: main.rs
crates/factorial_engine/src/: lib.rs
crates/fractal_algebra/: Cargo.toml  README.md
crates/fractal_algebra/docs/: algebra.md  philosophy.md
crates/fractal_algebra/src/: ai.rs  algebra.rs  atom.rs  bayes.rs  constants.rs  criticloop.rs  critics.rs  evolutionary.rs  field.rs  filters.rs  fractaledge.rs  graph.rs  graphedge.rs  laws.rs  lib.rs  looprep.rs  macros.rs  mutation.rs  resonance.rs  rfg.rs  signature.rs  stochastic.rs  tests.rs  time.rs  traits.rs  vec3.rs
crates/tma_engine/: Cargo.toml  README.md
crates/tma_engine/examples/sierpinski/: Cargo.toml
crates/tma_engine/examples/sierpinski/src/: main.rs
crates/tma_engine/src/: geometry.rs  lib.rs  render.rs
docs/: Quantum Mechanics and Fractal Algebra.md  semantics.md
examples/a_star/: Cargo.toml
examples/a_star/src/: main.rs
examples/canonical_test/: Cargo.toml
examples/canonical_test/src/: main.rs
examples/fast_fac/: Cargo.toml
examples/fast_fac/src/: main.rs
examples/mandelbrot/: Cargo.toml
examples/mandelbrot/src/: main.rs
examples/sierpinski/: Cargo.toml
examples/sierpinski/src/: main.rs
src/: algebra.rs  atom.rs  criticloop.rs  critics.rs  edge.rs  evolutionary.rs  field.rs  filters.rs  fractaledge.rs  laws.rs  lib.rs  looprep.rs  macros.rs  mutation.rs  resonance.rs  rfg.rs  signature.rs  stochastic.rs  testkit.rs  tests.rs  traits.rs  vec3.rs
tests/: algebraic_axioms.rs  canonical_test.rs
