[workspace]
resolver = "3"
members = [ 
    "crates/factorial_engine",
    "crates/fractal_algebra",
    "crates/tma_engine",
    "examples/sierpinski",   
    "examples/fast_fac",
    "examples/mandelbrot", 
    "crates/fa_group_theory", 
    "crates/fa_bayes", 
    "crates/fa_slow_ai", 
    "crates/fa_core"]

# Add this entire section
[workspace.dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
fractal_algebra = { version = "0.2.1", path = "./crates/fractal_algebra" }
fa_core = { version = "0.1.0", path = "./crates/fa_core" }
# etc. for all shared dependencies