[workspace]
resolver = "3"
members = [ 
    "crates/factorial_engine",
    "crates/fractal_algebra",
    "crates/tma_engine",
    "examples/sierpinski",   
    "examples/fast_fac",
    "examples/mandelbrot", 
    "crates/fa_bayes", 
    "crates/fa_slow_ai"]

# Add this entire section
[workspace.dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
fractal_algebra = { version = "0.2.1", path = "./crates/fractal_algebra" }
# etc. for all shared dependencies