[package]
name = "fa_core"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NeilCrago/fractal_algebra/tree/master/crates/fa_core"
documentation = "https://docs.rs/fa_core"

[dependencies]
fractal_algebra = { path = "../fractal_algebra" }
num-complex = "0.4.6"
