[package]
name = "fa_group_theory"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NeilCrago/fractal_algebra/tree/master/crates/fa_group_theory"
documentation = "https://docs.rs/fa_group_theory"
description = "A library for exploring group theory using fractal algebra."
keywords = ["group", "theory", "fractal", "algebra"]

[dependencies]
