[package]
name = "fa_slow_ai"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago"]
license = "MIT"
repository = "https://github.com/NeilCrago/fractal_algebra/tree/master/crates/fa_slow_ai"
documentation = "https://docs.rs/fa_slow_ai"
keywords = ["AI", "fractal", "Bayesian"]
description = "A slow AI implementation using fractal algebra."

[dependencies]
fractal_algebra = "0.2.7"
num-complex = "0.4.6"
rustfft = "6.4.0"
rand = "0.9.2"
