[package]
name = "factorial_engine"
version = "0.1.7"
edition = "2024"
authors = ["Neil Crago"]
description = "A library for producing factorials"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Neil-Crago/fractal_algebra/tree/master/crates/factorial_engine"
documentation = "https://docs.rs/factorial_engine"
keywords = ["mathematics", "factorial"]


[dependencies]
