[package]
name = "fractal_algebra"
version = "0.3.1"
edition = "2024"
authors =  ["Neil Crago"]
description = "A library for fractal algebra experimentation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Neil-Crago/fractal_algebra/tree/master/crates/fractal_algebra"
documentation = "https://docs.rs/fractal_algebra"
keywords = ["fractal", "algebra", "mathematics", "complex-numbers"]


[dependencies]
factorial_engine = "0.1.3"
num-complex = "0.4.6"
thiserror = "2.0.16"
rand = "0.9.2"
rand_distr = "0.5.1"
