[package]
name = "tma_engine"
version = "0.1.0"
edition = "2024"
authors = ["Neil Crago"]
description = "A lightweight and ergonomic Rust crate for defining, composing, and applying 2D affine transformations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Neil-Crago/fractal_algebra/crates/tma_engine"
documentation = "https://docs.rs/tma_engine"
keywords = ["TMA", "tiling", "morphing", "animation"]

[dependencies]
image = "0.25.6"
rand = "0.8"
